--- a/apps/herbatika/src/styles/tokens/components/molecules/_herbatika-dialog.css
+++ b/apps/herbatika/src/styles/tokens/components/molecules/_herbatika-dialog.css
@@ -7,7 +7,6 @@
   --gap-dialog-content: 0;
   --border-width-dialog: 0;
   --shadow-dialog-content: none;
-  --color-dialog-bg:var(--color-surface);
 }
 
 :where([data-herbatika-mobile-menu-dialog-root])
